# llmops-rag-app

./: .gitignore  answer_correctness_metric.py  evaluate_rag_app.py  generate_eval_dataset.py  generate_goldens.py  main.py  pyproject.toml  rag-app.ipynb  rag-workflow.py  requirements.txt  simple_explanation_metric.py  test_recall_metric.py  test_relevancy_metric.py  transcript_utils.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
cleaned-transcripts/: 12.txt  14.txt  3.txt  4.txt
data/evaluation/eval_dataset/: evaluation_dataset.json  (+1 more)
data/processed/: 10.txt  13.txt  2.txt  5.txt  6.txt  7.txt  9.txt
data/raw/: 10.txt  12.txt  13.txt  2.txt  3.txt  4.txt  6.txt  7.txt
datasets/eval_dataset/: evaluation_dataset.json
datasets/goldens/: golden_dataset.json
evaluation_report/: evaluation_20260721_010819.html
notebooks/: rag-app.ipynb
reports/: models_used.md
reports/evaluation_report/: evaluation_20260722_220059.md  evaluation_20260723_204555.md
reports/evaluation_results/: test_run_20260722_220100.json  test_run_20260723_204555.json
saved-embeddings/61605d39-5fb9-49ac-9f71-d402eb198946/: index_metadata.pickle
saved-embeddings/62c60653-8840-4a55-81b0-982811648919/: index_metadata.pickle
saved-embeddings/f34efba4-32ac-414b-b788-4a240a05b419/: index_metadata.pickle
src/app/: load_system_prompt.py  rag_workflow.py  system_prompt_versioning.py
src/data/: generate_eval_dataset.py  generate_goldens.py
transcripts/: 14.txt  5.txt  9.txt
utils/: transcript_utils.py
(+6 files in other folders)
